--- a/reference/pipelines/synapse-processing/M2C2_Hershey_Demo_051019.Rmd
+++ b/reference/pipelines/synapse-processing/M2C2_Hershey_Demo_051019.Rmd
@@ -11,7 +11,7 @@ output: html_notebook
 ```{r}
 # install.packages("synapser", repos=c("https://sage-bionetworks.github.io/ran", "http://cran.fhcrc.org"))
 library(synapser)
-synLogin(email='nur375@psu.edu', password='', rememberMe=T)
+synLogin(email='nur375@psu.edu', password=, rememberMe=T)
 ```
 
 # R Package: RM2C2
@@ -82,6 +82,11 @@ synapse_color_dots <- function(synapseID = NA, record_UUIDs = NA) {
   # summarise for each person, and session
   summary.df <- summary_color_dots(scored.df, c("user_id","game_uuid"))
   
+
+# will eventually go into RM2C2
+synapse_dot_memory <- function(synapseID = NA, record_UUIDs = NA) {
+  # build the query
+  base.query <- "select * from %s WHERE game_uuid IN (%s)"
   return(list(scored=scored.df, summary=summary.df))
 }
 
@@ -89,11 +94,6 @@ synapse_color_dots <- function(synapseID = NA, record_UUIDs = NA) {
 
 
 ```{r}
-
-# will eventually go into RM2C2
-synapse_dot_memory <- function(synapseID = NA, record_UUIDs = NA) {
-  # build the query
-  base.query <- "select * from %s WHERE game_uuid IN (%s)"
   uuid.query <- paste0(sQuote(record_UUIDs), collapse=",")
   query <- sprintf(base.query, synapseID, uuid.query)
   results <- synTableQuery(query)
@@ -315,5 +315,5 @@ write.csv(flight1.beep.survey.scoredcog, "~/Github/tmp/M2C2_beep_scored.csv", ro
 
 ```{r}
 library(dataMaid)
-makeDataReport(M2C2_beep_scored, replace=T, mode=c("summarize", "check"))
+makeDataReport(flight1.beep.survey.scoredcog, replace=T, mode=c("summarize", "check"))
 ```
